--- a/02-increment.html
+++ b/02-increment.html
@@ -26,9 +26,11 @@
 </div>
 
 <script type="text/javascript">
+        // fonction pour recupere le nombre preferer de l'utilisateur puis faire un affichage
+
     function incrementNumber() {
         let number = document.getElementById("number").value;
-
+        alert(++number)
         // CODE HERE !
     }
 </script>
