--- a/03-console.html
+++ b/03-console.html
@@ -25,7 +25,13 @@
 </div>
 
 <script type="text/javascript">
-    // CODE HERE
+    /* methode qui arrondis le reusltat au plus proche */
+    let favoriteNumber = 73
+   favoriteNumber = favoriteNumber * favoriteNumber;
+   favoriteNumber = favoriteNumber * 73;
+   favoriteNumber = favoriteNumber / 1000;
+   console.log(Math.round(favoriteNumber));
+
 </script>
 </body>
 </html>
