--- a/04-adult.html
+++ b/04-adult.html
@@ -34,8 +34,17 @@
 </div>
 
 <script type="text/javascript">
-    function verifyAge() {
+   /*fonction qui sert a verifier l'age sur le site */
+   function verifyAge() {
+
         let age = document.getElementById("age").value;
+        if (age < 18){
+        alert("Vous devez être majeur pour accèder au site !");
+        }
+        else {
+          alert("Bienvenue sur le site") 
+        }
+        
 
         // CODE HERE !
     }
