--- a/06-temperature.html
+++ b/06-temperature.html
@@ -29,12 +29,13 @@
 </div>
 
 <script type="text/javascript">
-    const MELTING_POINT = 12;
+   
+   const MELTING_POINT = 12;
 
     function solidOrLiquid() {
-        let temperature = document.getElementById("temperature").value
-
-        if(température > MELTING_POINT) {
+       let temperature = document.getElementById("temperature").value
+//changement du é en e de temperature 
+        if(temperature > MELTING_POINT) {
             alert("C'est de l'eau liquide !");
         } else {
             alert("C'est de la glace !")
