--- a/05-even-odd.html
+++ b/05-even-odd.html
@@ -36,8 +36,15 @@
 <script type="text/javascript">
     function evenOrOdd() {
         // AIDE : regarder du côté des modulos en javascript
+        /*fonction qui sert a savoir si un nombre est pair ou impair*/
 
         let number = document.getElementById("number").value;
+        if (number%2 == 0){
+        alert("pair")
+        }
+    else {
+    alert("impair")
+    }
 
         // CODE HERE !
     }
