--- a/08-passwords.html
+++ b/08-passwords.html
@@ -36,8 +36,14 @@
 
 <script type="text/javascript">
     function confirmPassword() {
-        // CODE HERE !
-    }
+        password = document.getElementById("password");
+        valeur_password =  document.getElementById("verifpassword");
+        if ("password" == "verifpassword" ){
+        alert("Bienvenue sur le site");
+        }
+        else {
+                alert("Les mots de passe ne correspondent pas...")
+        }
 </script>
 </body>
 </html>
