--- a/08-passwords.html
+++ b/08-passwords.html
@@ -38,7 +38,7 @@
     function confirmPassword() {
         password = document.getElementById("password");
         valeur_password =  document.getElementById("verifpassword");
-        if ("password" == "verifpassword" ){
+        if (password.value == verifpassword.value ){
         alert("Bienvenue sur le site");
         }
         else {
