--- a/08-passwords.html
+++ b/08-passwords.html
@@ -36,14 +36,15 @@
 
 <script type="text/javascript">
     function confirmPassword() {
-        password = document.getElementById("password");
-        valeur_password =  document.getElementById("verifpassword");
-        if ("password" == "verifpassword" ){
+       let password = document.getElementById("password").value;
+     let   verif_password =  document.getElementById("confirmation").value;
+        if (password == verif_password){
         alert("Bienvenue sur le site");
         }
         else {
                 alert("Les mots de passe ne correspondent pas...")
         }
+    }
 </script>
 </body>
 </html>
