--- a/08-passwords.html
+++ b/08-passwords.html
@@ -37,8 +37,8 @@
 <script type="text/javascript">
     function confirmPassword() {
        let password = document.getElementById("password").value;
-     let   verif_password =  document.getElementById("confirmation").value;
-        if (password == verif_password){
+       let confirm_password =  document.getElementById("confirmation").value;
+        if (password == confirm_password){
         alert("Bienvenue sur le site");
         }
         else {
