modification exose 9 et 10

--- a/05-even-odd.html
+++ b/05-even-odd.html
@@ -34,7 +34,8 @@
 </div>
 
 <script type="text/javascript">
-    function evenOrOdd() {
+   /*fonction qui sert a savoir un nombre pair et impair*/
+   function evenOrOdd() {
         // AIDE : regarder du côté des modulos en javascript
         /*fonction qui sert a savoir si un nombre est pair ou impair*/
 
