--- a/07-primary-colors.html
+++ b/07-primary-colors.html
@@ -41,6 +41,7 @@
         function primaryColors() {
             let colors = document.getElementById("colors");
             let secondaryColor = colors.options[colors.selectedIndex].value;
+            /* chercher la  variable colors plus appeler l'option des couleurs primaires */
             if (colors.value == "green") {
                 alert("Le vert est composé de jaune et bleu")
             }
