--- a/08-passwords.html
+++ b/08-passwords.html
@@ -35,6 +35,7 @@
 </div>
 
 <script type="text/javascript">
+    /* fonction qui sert à vérérifier si le mot de pas et la confirmation du mot de passe sont les même */
     function confirmPassword() {
        let password = document.getElementById("password").value;
        let confirm_password =  document.getElementById("confirmation").value;
