--- a/05-even-odd.html
+++ b/05-even-odd.html
@@ -37,14 +37,13 @@
    /*fonction qui sert a savoir un nombre pair et impair*/
    function evenOrOdd() {
         // AIDE : regarder du côté des modulos en javascript
-        /*fonction qui sert a savoir si un nombre est pair ou impair*/
 
         let number = document.getElementById("number").value;
-        if (number%2 == 0){
-        alert("pair")
+        if (number % 2 == 0){
+        alert(number + "  est pair");
         }
     else {
-    alert("impair")
+    alert(number + " est impair");
     }
 
         // CODE HERE !
