--- a/08-passwords.html
+++ b/08-passwords.html
@@ -39,7 +39,7 @@
     function confirmPassword() {
        let password = document.getElementById("password").value;
        let confirm_password =  document.getElementById("confirmation").value;
-        if (password == confirm_password){
+        if (password === confirm_password){
         alert("Bienvenue sur le site");
         }
         else {
